[package]
name = "nimiq-genesis-migration"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true 
categories.workspace = true
description = "Migrates the Nimiq PoW accounts state and constructs the first Nimiq PoS Election Block"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
humantime = "2.1"
jsonrpc = "0.16"
log = { package = "tracing", version = "0.1", features = ["log"] }
nimiq-database = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-genesis-builder = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-vrf = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq_rpc = { git = "https://github.com/jsdanielh/rust-client.git" }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry"] }

nimiq-history-migration = { workspace = true }
nimiq-state-migration = { workspace = true }