[package]
name = "nimiq-pow-monitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true 
categories.workspace = true
description = "Sends a validator ready transaction to the Nimiq PoW chain and monitor this chain for validator readiness"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
jsonrpc = "0.16"
log = "0.4.19"
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross.git", features = ["policy"] }
nimiq_rpc = "0.1.3"
simple_logger = "4.2.0"
thiserror = "1.0"
