[package]
name = "nimiq-pow-monitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true 
categories.workspace = true
description = "Sends a validator ready transaction to the Nimiq PoW chain and monitor this chain for validator readiness"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
log = "0.4.19"
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross.git",features = ["policy"] }
nimiq-state-migration = { workspace = true }
nimiq_rpc = { git = "https://github.com/jsdanielh/rust-client.git" }
percentage = "0.1.0"
simple_logger = "4.2.0"
thiserror = "1.0"
tokio = { version = "1.29", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
url = "2.3"
