[package]
name = "state_migration"
version = "0.1.0"
edition = "2021"
description = "Migrates the Nimiq PoW state to Nimiq PoS"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hex = "0.4"
humantime = "2.1"
jsonrpc = "0.16"
log = { package = "tracing", version = "0.1", features = ["log"] }
nimiq-genesis-builder = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-vrf = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq_rpc = { git = "https://github.com/jsdanielh/rust-client.git" }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry"] }
