[package]
name = "nimiq-state-migration"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true 
categories.workspace = true
description = "Migrates the Nimiq PoW state to Nimiq PoS"

[dependencies]
hex = "0.4"
jsonrpc = "0.16"
log = { package = "tracing", version = "0.1", features = ["log"] }
nimiq-bls = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-genesis-builder = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-serde = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq-vrf = { git = "https://github.com/nimiq/core-rs-albatross.git" }
nimiq_rpc = { git = "https://github.com/jsdanielh/rust-client.git" }
thiserror = "1.0"
