[package]
name = "nimiq-pos-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true 
categories.workspace = true
description = "Wrapper for migrating and starting a Nimiq PoS Validator"

[dependencies]